[project]
name = "incoming-observatory"
version = "0.1.0"
description = "An open ledger of how much warning we actually had before near-Earth objects arrived — and the first open-source imminent-impactor alert layer."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "incoming-observatory contributors" }]
keywords = ["planetary-defense", "near-earth-object", "asteroid", "interstellar-object", "early-warning", "provenance"]

dependencies = [
    "httpx>=0.27",         # public-API client (CNEOS / MPC / ESA NEOCC)
    "pandas>=2.2",         # tabular warning-time ledger
    "pyarrow>=16.0",       # parquet output (the published dataset)
    "numpy>=1.26",
    "jsonschema>=4.23",    # validate every warning record against the contract
    "matplotlib>=3.8",     # the "how blind are we" plot
    "pyyaml>=6.0",
]

[project.optional-dependencies]
astro = [
    "astroquery>=0.4.7",   # MPC discovery-observation access (recompute warning time)
]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
incoming = "incoming.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/incoming"]

[tool.ruff]
line-length = 100
src = ["src"]
